# backend/src/models/Payment.ts
@@ -1,0 +1,8 @@
+export default interface Payment {
+    id: number;
+    bookingId: number;
+    paymentMethod: string;
+    amount: number;
+    status: string;
+    transactionDate: string;
+}
